# ghost-reference

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  app.cpp  app.h  color_picker.cpp  color_picker.h  ghost_reference.rc  global_hotkeys.cpp  global_hotkeys.h  logger.cpp  logger.h  main.cpp  preferences.cpp  preferences.h  reference_collection.cpp  reference_collection.h  reference_image.cpp  reference_image.h  reference_loading.cpp  reference_loading.h  saving.cpp  saving.h  system_tray_icon.cpp  system_tray_icon.h  tool.cpp  tool.h  types.h  undo_stack.cpp  undo_stack.h  utils.h
resources/: color_picker.png~  resources.qrc  stylesheet.qss  stylesheet_dark.qss
tests/: CMakeLists.txt  tests_main.cpp
tools/: CMakeLists.txt  color_picker.cpp  color_picker.h  extract_tool.cpp  extract_tool.h  tool.cpp  tool.h
utils/: CMakeLists.txt  image.cpp  image.h  network_download.cpp  network_download.h  result.h  window_utils.cpp  window_utils.h  zip_file.cpp  zip_file.h
widgets/: CMakeLists.txt  back_window.cpp  back_window.h  back_window_actions.cpp  back_window_actions.h  help_window.cpp  help_window.h  main_toolbar.cpp  main_toolbar.h  main_toolbar_actions.cpp  main_toolbar_actions.h  main_window.cpp  main_window.h  main_window_actions.cpp  main_window_actions.h  picture_widget.cpp  picture_widget.h  preferences_window.cpp  preferences_window.h  reference_titlebar.cpp  reference_titlebar.h  reference_window.cpp  reference_window.h  resize_frame.cpp  resize_frame.h  settings_panel.cpp  settings_panel.h  tab_bar.cpp  tab_bar.h  toolbar_window.cpp  toolbar_window.h
